# veilid_duplex

./: Cargo.toml  README.md
examples/: chat.rs  client.rs  pingpong.rs  server.rs
src/: config.rs  dht.rs  error.rs  lib.rs  utils.rs  veilid.rs
