[package]
name = "veilid_duplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.3"
clap = { version = "4.3.21", features = ["derive"] }
flume = "0.11.0"
futures-util = "0.3.28"
serde = { version = "1.0.188", features= ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
veilid-core = { git = "https://gitlab.com/veilid/veilid", rev="cc5cb8a8b0392d2e17904b1fa3e11f0641b9610e", features = [ "rt-tokio" ] }
rand="0.8.5"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.test] 
opt-level = 2