[package]
edition = "2021"
name = "veilid_duplex"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Full-duplex encrypted communication between 2 nodes"
keywords = ["veilid", "encryption", "communication", "rl"]
repository = "https://gitlab.com/cwiz/veilid_duplex"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.3"
clap = { version = "4.3.21", features = ["derive"] }
flume = "0.11.0"
futures-util = "0.3.28"
serde = { version = "1.0.188", features= ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
# veilid-core = { version="0.2.4", features = [ "rt-tokio" ] }
veilid-core = {git="https://gitlab.com/veilid/veilid.git", rev="cc5cb8a8b0392d2e17904b1fa3e11f0641b9610e"}
rand="0.8.5"
fnv ="1.0.7"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",               
    "fast-rng",          
    "macro-diagnostics", 
]

[profile.test] 
opt-level = 2