[package]
edition = "2021"
name = "veilid_duplex"
version = "0.2.0"
license = "MIT OR Apache-2.0"
description = "Full-duplex encrypted communication between 2 nodes"
keywords = ["veilid", "encryption", "communication", "rl"]
repository = "https://gitlab.com/cwiz/veilid_duplex"

[dependencies]
anyhow = "1.0.72"
base64 = "0.22.0"
clap = { version = "4.3.21", features = ["derive"] }
flume = "0.11.0"
futures-util = "0.3.28"
serde = { version = "1.0.188", features= ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
rand="0.8.5"
fnv ="1.0.7"
async-std ="1.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
veilid-core = {version="0.3.0", default-features = false, features=["default-async-std"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
veilid-core = {version="0.3.0", default-features = false, features=["default-wasm"]}
veilid-wasm = {version = "0.1.0"}

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[profile.test]
opt-level = 2